--- a/F1_ML.ipynb
+++ b/F1_ML.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "F1_ML.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLVX/5uwlWsFN51BEGnGXF",
+      "authorship_tag": "ABX9TyNvM3rNwv08YnvOFYztzhuM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,14 +34,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YfrBTGAX6-kA",
-        "outputId": "ced5bb7f-5ac2-4010-e1fb-ce29e3f3505f"
+        "outputId": "86c6568f-50aa-4c39-9a6f-81f59ce5e240"
       },
       "source": [
         "import csv\n",
         "import pandas as pd\n",
         "print('imported modules')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,7 +59,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zz5mEGyd6k-O",
-        "outputId": "e8f826c0-19de-4906-8883-e69b511aee9d"
+        "outputId": "c4d90279-9caa-4e95-f447-c730612c6f52"
       },
       "source": [
         "\n",
@@ -73,19 +73,28 @@
         "\n",
         "simple_df = df.drop(columns=['number', 'positionText', 'positionOrder', 'points', 'laps', 'time', 'milliseconds', 'fastestLap', 'fastestLapTime', 'fastestLapSpeed', 'statusId'])\n",
         "\n",
-        "#print(simple_df)\n",
+        "\n",
         "df['position'] = pd.to_numeric(df['position'])\n",
+        "\n",
+        "print(simple_df.head())\n",
         "\n",
         "tuple_form = list(simple_df.itertuples(index=False, name=None))\n",
         "\n",
-        "#print(tuple_form)\n"
+        "print(tuple_form[0])\n"
       ],
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "('24966', '1052', '1', '131', '44', '2', '1', '1', '1', '25', '56', '1:32:04', '5523897', '44', '4', '1:34.015', '207.235', '1')\n"
+            "('24966', '1052', '1', '131', '44', '2', '1', '1', '1', '25', '56', '1:32:04', '5523897', '44', '4', '1:34.015', '207.235', '1')\n",
+            "   resultId  raceId  driverId  constructorId  grid  position  rank\n",
+            "0     24966    1052         1            131     2         1     4\n",
+            "1     24967    1052       830              9     1         2     2\n",
+            "2     24968    1052       822            131     3         3     1\n",
+            "3     24969    1052       846              1     7         4     6\n",
+            "4     24970    1052       815              9     0         5     3\n",
+            "(24966, 1052, 1, 131, 2, 1, 4)\n"
           ],
           "name": "stdout"
         }
